--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-<body>
-    
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- Css -->
+     <link rel="stylesheet" href="styles/style.css">
+    </head>
+
+<body class="raleway-main">
+    <header>
+        <nav>
+            <ul>
+                <li><a href="" class="inter-logo">LOGO</a></li>
+                <li><a href=""><button class="main-button">Sign Up</button></a></li>
+            </ul>
+        </nav>
+
+        <section class="banner">
+            <div class="banner-conatiner">
+                <h1>Cool Dark UI Template for <br> Webflow Agencies!</h1>
+                <div>
+                    <button class="main-button">Stay Focused</button>
+                </div>
+            </div>
+        </section>
+
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
