--- a/index.html
+++ b/index.html
@@ -23,15 +23,26 @@
 
         <section class="banner">
             <div class="banner-conatiner">
-                <h1>Cool Dark UI Template for <br> Webflow Agencies!</h1>
+                <h1 aria-colcount="main-color">Cool Dark UI Template for <br> Webflow Agencies!</h1>
                 <div>
                     <button class="main-button">Stay Focused</button>
                 </div>
             </div>
         </section>
-
     </header>
-    <main></main>
+    <main>
+        <!-- See it in action -->
+        <section class="action">
+            <div class="action-container">
+                <div class="column">
+                    <h2>See It in Action</h2>
+                    <p>Explore the live preview and imagine your brand in this bold new look.</p>
+                    <button class="main-button">Launch Live Preview</button>
+                </div>
+                <img src="Assets/wc-mini.png" alt="">
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
