review section added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simple Web Page</title>
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/5220/5220478.png" type="image/x-icon">
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -42,6 +43,109 @@
                 <img src="Assets/wc-mini.png" alt="">
             </div>
         </section>
+
+        <!-- Number Section -->
+         <section class="number">
+          <div class="number-container">
+            <h1 class="new-header">Joined Thousands of Productive Users</h1>
+
+            <div class="number-items">
+
+              <div class="number-item">
+                <h1 class="inter-logo">50k</h1>
+                <p>Active User</p>
+              </div>
+              <div class="new-item">
+                <h1 class="inter-logo">2M+</h1>
+                <p>Focus Session</p>
+              </div>
+              <div class="new-item">
+                <h1 class="inter-logo">95%</h1>
+                <p>Satisfaction Rate</p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <div class="card-margin"></div>
+
+        <!-- Review Section -->
+         <section class="review">
+            <div class="review-container">
+                <h2>What our users say</h2>
+                <div class="cards">
+                    <!-- Card 1 -->
+                    <div class="card">
+                        <div class="icons">
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                        </div>
+                        <h3>Loved by Designers</h3>
+                        <p class="inner-card-p">This template instantly leveled up <br> our presence.” – Studio Vertex</p>
+                        <div class="inner-conatiner">
+                            <div>
+                                <img src="Assets/avatar.png" alt="">
+                            </div>
+                            <div>
+                                <h6>Reviewer Name</h6>
+                                <p>Date</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End 1st Card -->
+
+                    <!-- 2nd card -->
+                    <div class="card">
+                        <div class="icons">
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                            
+                        </div>
+                        <h3>Loved by Designers</h3>
+                        <p class="inner-card-p">This template instantly leveled up <br> our presence.” – Studio Vertex</p>
+                        <div class="inner-conatiner">
+                            <div>
+                                <img src="Assets/avatar.png" alt="">
+                            </div>
+                            <div>
+                                <h6>Reviewer Name</h6>
+                                <p>Date</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 2nd Card -->
+
+                    <div class="card">
+                        <div class="icons">
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                            <div class="icon"><img src="Assets/icon-star.png" alt=""></div>
+                        </div>
+                        <h3>Loved by Designers</h3>
+                        <p class="inner-card-p">This template instantly leveled up <br> our presence.” – Studio Vertex</p>
+                        <div class="inner-conatiner">
+                            <div>
+                                <img src="Assets/avatar.png" alt="">
+                            </div>
+                            <div>
+                                <h6>Reviewer Name</h6>
+                                <p>Date</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Card -->
+                </div>
+            </div>
+         </section>
+
+         <div class="card-margin"></div>
     </main>
     <footer></footer>
 </body>
