main section updated

--- a/index.html
+++ b/index.html
@@ -146,6 +146,48 @@
          </section>
 
          <div class="card-margin"></div>
+
+         <section class="focus">
+            <div class="focus-container">
+                <h1 class="focus-title">Ready to focus better</h1>
+                <p class="focus-des">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <div class="btn">
+                    <button class="main-button">Get Started Free</button>
+                </div>
+                <div class="btn">
+                    <img src="Assets/wc-big.png" alt="">
+                </div>
+            </div>
+         </section>
+
+         <div class="card-margin"></div>
+
+         <section class="touch">
+            <div class="touch-container">
+                <div class="touch-parent">
+                    <div class="touch-col-l">
+                        <h1>Let’s Get in Touch</h1>
+                    </div>
+                    <div class="touch-col-r">
+                        <form action="">
+                            <label for="email">Email</label>
+                            <input class="touch-i" type="email" placeholder="example@email.com" id="email">
+
+                            <label for="name">Name</label>
+                            <input class="touch-i"  type="name" placeholder="full name" id="email">
+
+                            <label for="message">Message</label>
+                            <textarea class="touch-i"  name="" id="message" placeholder="write your message....." ></textarea>
+
+                            <input type="submit" placeholder="Get in Touch">
+
+                        </form>
+                    </div>
+                </div>
+            </div>
+         </section>
+
+         <div class="card-margin"></div>
     </main>
     <footer></footer>
 </body>
