all changes apply

--- a/index.html
+++ b/index.html
@@ -189,6 +189,19 @@
 
          <div class="card-margin"></div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer-container">
+            <h1 class="footer-logo inter-logo">LOGO</h1>
+            <p class="footer-des">Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+            <div class="foot-i">
+                <div class="footer-items">
+                <div class="footer-item">Home</div>
+                <div class="footer-item">About</div>
+                <div class="footer-item">About</div>
+                <div class="footer-item">Services</div>
+            </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
